--- a/resume.html
+++ b/resume.html
@@ -165,7 +165,8 @@
               <p>Develop a year-long <a href="https://docs.google.com/document/d/1hRF-uF3H8B5HLFKhyZ5QOxIFbw9jPk_aS97hyZkl1Cg/edit?usp=sharing" target="_blank">computer science curriculum</a> applicable for students in grades 5 – 8 focused on teaching programming fundamentals that culminates in a final project.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2018 - Present</span>
+              <span class="text-primary"><p>New Haven, CT
+                <br>January 2018 - Present</p></span>
             </div>
           </div>
 
@@ -192,12 +193,25 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
+              <a href="https://code65.org/" target="_blank"> <h3 class="mb-0">Code65 - Evanston Public Library</h3> </a>
+              <div class="subheading mb-3">Website Developer & Activity Designer</div>
+              <p>Develop introduction to computer science learning activities for middle school students in summer programs at the <a href="https://www.epl.org/" target="_blank">Evanston Public Library</a>. Contribute to the development of the new computer science teaching tool for the <a href="https://www.district65.net/" target="_blank">District 65 School District</a> called <a href="https://code65.org/" target="_blank">Code65</a>. </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary"><p>Evanston, IL
+                <br>May 2018 - Present</p></span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
               <a href="https://cpsc.yale.edu/academics/undergraduate-program" target="_blank"> <h3 class="mb-0">Yale University Computer Science Department</h3> </a>
               <div class="subheading mb-3">Undergraduate Learning Assistant</div>
               <p>Teach review sessions, host office hours, grade assignments, and mentor final projects for the Introduction to Computer Science and Introduction to Programming courses, as well as participate in teacher training workshops.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2018 - Present</span>
+              <span class="text-primary"><p>New Haven, CT
+                <br>January 2018 - Present</p></span>
             </div>
           </div>
 
@@ -232,7 +246,8 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <div class="subheading mb-3">Machine Translation for English Retrieval of Any Language Project</div>
-              <p>Redesign <a href="http://tangra.cs.yale.edu/material/" target="_blank">translation software</a> for a cross-lingual information retrieval system specifically for low-density and surprise languages, with training data in Swahili and Tagalog.</p>
+              <!-- <p>Redesign <a href="http://tangra.cs.yale.edu/material/" target="_blank">translation software</a> for a cross-lingual information retrieval system specifically for low-density and surprise languages, with training data in Swahili and Tagalog.</p> -->
+              <p>Redesign translation software for a cross-lingual information retrieval system specifically for low-density and surprise languages, with training data in Swahili and Tagalog.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">
@@ -243,7 +258,7 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <div class="subheading mb-3">All About NLP Project</div>
-              <p>Create and update the <a href="http://tangra.cs.yale.edu/newaan/" target="_blank">All About NLP (AAN)</a> website interface and database with a focus on improving search queries through machine learning as part of a team of developers.</p>
+              <p>Create and update the <a href="http://aan.how/" target="_blank">All About NLP (AAN)</a> website interface and database with a focus on improving search queries through machine learning as part of a team of developers.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">
@@ -284,11 +299,11 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <a href="https://www.att.com/" target="_blank"><h3 class="mb-0">AT&T</h3>
+              <a href="https://careers.att.jobs/careers/college/internships/technology-development-internships/software-development-internship" target="_blank"><h3 class="mb-0">AT&T Technology Development Program</h3>
               <div class="subheading mb-3"></a>
-                Software Engineering Intern
+                Software Development Intern
               </div>
-              <p>Prospective intern working on software development projects.</p>
+              <p>Intern working on projects related to corporate security.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">
@@ -328,6 +343,10 @@
             <div class="resume-content mr-auto">
               <a><h3 class="mb-0">Yale Undergraduate Society of Women Engineers</h3></a>
             </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">
+                <p>New Haven, CT</p></span>
+            </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
@@ -346,6 +365,10 @@
             <div class="resume-content mr-auto">
               <a href="http://yalewics.com/" target="_blank"><h3 class="mb-0">Float: Yale Women in Computer Science Society</h3></a>
             </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">
+                <p>New Haven, CT</p></span>
+            </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
@@ -362,14 +385,18 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-1">
             <div class="resume-content mr-auto">
-              <a href="http://ethswistem.weebly.com/" target="_blank"> <h3 class="mb-0">ETHS Women in Science, Technology, Engineering, and Mathematics</h3></a>
+              <a href="http://ethswistem.weebly.com/" target="_blank"> <h3 class="mb-0">Women in Science, Technology, Engineering, and Mathematics</h3></a>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Evanston, IL</span>
             </div>
           </div>
+
 
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <div class="subheading mb-3">Founder & President</div>
-              <p>Founded first ever club at Evanston Township High School to encourage more girls to participate in higher level science courses and pursue careers in STEM.</p>
+              <p>Founded first ever club at <a href="https://www.eths.k12.il.us/" target="_blank">Evanston Township High School</a> to encourage more girls to participate in higher level science courses and pursue careers in STEM.</p>
               <p>Organized shadow days at Northwestern University, design competitions, monthly meetings, and tutoring programs for more than 150 club members.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -386,7 +413,9 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <p class="mb-1">
-                <a href="https://we18.swe.org/" target="_blank">WE18 – Society of Women Engineers National Conference</a>, Speaker (accepted)</p>
+                <a href="https://we18.swe.org/" target="_blank">WE18 – Society of Women Engineers National Conference</a>, Speaker (upcoming)</p>
+              <p class="mb-1">
+                <a href="https://ghc.anitab.org/" target="_blank">Grace Hopper Women in Technology Conference 2018</a>, Microsoft Diversity Conference Scholarship Recipient (upcoming)</p>
               <p class="mb-1">
                 <a href="http://womenengineerscode.com/" target="_blank">WECode 2018 – Women in Computer Science Collegiate Conference</a>, Yale Sponsored Attendee</p>
               <p class="mb-1">
